--- a/src/site/_includes/header.njk
+++ b/src/site/_includes/header.njk
@@ -1,10 +1,13 @@
 <header>
   <ul class="nav">
     <li>
-      <a href="/">home<small>where the heart is</small></a>
+      <a href="/">Home<small>The summary</small></a>
     </li>
     <li>
-      <a href="/about">about<small>all about this</small></a>
+      <a href="/about">Bio<small>A professional biography</small></a>
+    </li>
+     <li>
+      <a href="/resume">Resume<small>For me to be able to print</small></a>
     </li>
   </ul>
   <h1>{{ title }}</h1>
