--- a/src/site/_includes/header.njk
+++ b/src/site/_includes/header.njk
@@ -7,7 +7,7 @@
       <a href="/about">Bio<small>A professional biography</small></a>
     </li>
      <li>
-      <a href="resume.trent.cx">Resume<small>For me to be able to print</small></a>
+      <a href="https://resume.trent.cx">Resume<small>For me to be able to print</small></a>
     </li>
   </ul>
   <h1>{{ title }}</h1>
